--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     gtag('js', new Date());
     gtag('config', 'UA-127045673-1');
   </script> -->
+
+  <!-- Link custom fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="styles/main.css">
+
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <div id="landing">
@@ -20,6 +23,14 @@
       <h1>👋 Hi, I'm Jonathan Gin.</h1>
       <hr>
       <h2>Website coming soon!</h2>
+    </div>
+    <div>
+      <ul>
+        <li><a href=""><i></i></a></li>
+        <li><a href=""><i></i></a></li>
+        <li><a href=""><i></i></a></li>
+        <li><a href=""><i></i></a></li>
+      </ul>
     </div>
   </div>
 </body>
