--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
   <div id="landing">
     <div id="title-box">
       <h1>👋 Hi, I'm Jonathan Gin.</h1>
-      <hr>
+      <div class="fancy-line" aria-hidden="true"></div>
       <h2>Website coming soon!</h2>
-    </div>
-    <div>
       <ul>
-        <li><a href=""><i></i></a></li>
-        <li><a href=""><i></i></a></li>
-        <li><a href=""><i></i></a></li>
-        <li><a href=""><i></i></a></li>
+        <li class="social-btn"><a href="https://www.facebook.com/jonathan.gin.1" target="_blank" rel="noopener" aria-label="Facebook"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
+        <li class="social-btn"><a href="https://www.instagram.com/jonathangin52/" target="_blank" rel="noopener" aria-label="Instagram"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
+        <li class="social-btn"><a href="https://github.com/JonathanGin52" target="_blank" rel="noopener" aria-label="Github"><i aria-hidden="true" class="fab fa-github"></i></a></li>
+        <li class="social-btn"><a href="https://www.linkedin.com/in/jonathangin/" target="_blank" rel="noopener" aria-label="LinkedIn"><i aria-hidden="true" class="fab fa-linkedin"></i></a></li>
       </ul>
     </div>
   </div>
