Added landing image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jonathan Gin</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127045673-1"></script>
@@ -19,16 +20,19 @@
 </head>
 <body>
   <div id="landing">
-    <div id="title-box">
-      <h1>👋 Hi, I'm Jonathan Gin.</h1>
-      <div class="fancy-line" aria-hidden="true"></div>
-      <h2>Website coming soon!</h2>
-      <ul>
-        <li class="social-btn"><a href="https://www.facebook.com/jonathan.gin.1" target="_blank" aria-label="Facebook"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
-        <li class="social-btn"><a href="https://www.instagram.com/jonathangin52/" target="_blank" aria-label="Instagram"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
-        <li class="social-btn"><a href="https://github.com/JonathanGin52" target="_blank" aria-label="Github"><i aria-hidden="true" class="fab fa-github"></i></a></li>
-        <li class="social-btn"><a href="https://www.linkedin.com/in/jonathangin/" target="_blank" aria-label="LinkedIn"><i aria-hidden="true" class="fab fa-linkedin"></i></a></li>
-      </ul>
+    <div class="row">
+      <div id="title-box">
+        <h1>👋 Hi, I'm Jonathan Gin.</h1>
+        <div class="fancy-line" aria-hidden="true"></div>
+        <h2>Website coming soon!</h2>
+        <ul>
+          <li class="social-btn"><a href="https://www.facebook.com/jonathan.gin.1" target="_blank" aria-label="Facebook"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
+          <li class="social-btn"><a href="https://www.instagram.com/jonathangin52/" target="_blank" aria-label="Instagram"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
+          <li class="social-btn"><a href="https://github.com/JonathanGin52" target="_blank" aria-label="Github"><i aria-hidden="true" class="fab fa-github"></i></a></li>
+          <li class="social-btn"><a href="https://www.linkedin.com/in/jonathangin/" target="_blank" aria-label="LinkedIn"><i aria-hidden="true" class="fab fa-linkedin"></i></a></li>
+        </ul>
+      </div>
+      <div id="profile-img"><img src="img/me.jpg" alt="A picture of me!"></div>
     </div>
   </div>
 </body>
