Uncomment google analytics tag

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jonathan Gin</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127045673-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127045673-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'UA-127045673-1');
-  </script> -->
+  </script>
 
   <link rel="stylesheet" href="css/main.css">
   <script src="js/onepagescroll.min.js"></script>
