--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="content-wrap">
           <div class="content-body">
             <h2>Shopify Dev Degree</h2>
-            <p>Shopify Dev Degree is a 4 year, work-integrated university program that combines 4500+ hours of work experience with an accredited computer science degree.</p>
+            <p>Shopify Dev Degree is a 4 year, work-integrated education program that combines 4500+ hours of work experience with an accredited computer science degree.</p>
           </div>
-          <img src="img/shopify.png" alt="Lassonde School of Engineering">
+          <img src="img/shopify.png" alt="Shopify Inc">
         </div>
       </div>
 
@@ -50,12 +50,15 @@
         <div class="content-wrap">
           <div class="content-body">
             <h2>Lassonde School of Engineering</h2>
-            <p>The Lassonde School of Engineering is a professional engineering school at York University.</p>
+            <p>The Lassonde School of Engineering is a professional engineering school at York University. Known for its innovative approach to <i>renaissance engineering</i> Lassonde seeks to ...</p>
           </div>
-          <img src="img/lassonde.png" alt="Shopify Inc">
+          <img src="img/lassonde.png" alt="Lassonde School of Engineering">
         </div>
       </div>
       <div id="slider" aria-hidden="true"></div>
+    </section>
+
+    <section id="projects">
     </section>
   </div>
 
