Add twitter social

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <ul>
           <li class="social-btn"><a href="https://www.facebook.com/jonathan.gin.1" target="_blank" aria-label="Facebook"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
           <li class="social-btn"><a href="https://www.instagram.com/jonathangin52/" target="_blank" aria-label="Instagram"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
-          <li class="social-btn"><a href="https://github.com/JonathanGin52" target="_blank" aria-label="Github"><i aria-hidden="true" class="fab fa-github"></i></a></li>
+          <li class="social-btn"><a href="https://www.github.com/JonathanGin52" target="_blank" aria-label="Github"><i aria-hidden="true" class="fab fa-github"></i></a></li>
           <li class="social-btn"><a href="https://www.linkedin.com/in/jonathangin/" target="_blank" aria-label="LinkedIn"><i aria-hidden="true" class="fab fa-linkedin"></i></a></li>
+          <li class="social-btn"><a href="https://twitter.com/jonathangin52" target="_blank" aria-label="Twitter"><i aria-hidden="true" class="fab fa-twitter"></i></a></li>
         </ul>
       </div>
       <div id="profile-img"><img src="img/me.jpg" alt="A picture of me!"></div>
