Update profile image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="social-btn"><a href="https://twitter.com/jonathangin52" target="_blank" aria-label="Twitter"><i aria-hidden="true" class="fab fa-twitter"></i></a></li>
         </ul>
       </div>
-      <div id="profile-img"><img src="img/me.jpg" alt="A picture of me!"></div>
+      <div id="profile-img"><img src="img/me.jpg" alt="Jonathan Gin"></div>
     </section>
 
     <section id="education">
