Use updated shopify logo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2>Shopify Dev Degree</h2>
             <p>Shopify Dev Degree is a 4 year, work-integrated education program that combines 4500+ hours of work experience with an accredited computer science degree.</p>
           </div>
-          <img src="img/shopify.png" alt="Shopify Inc">
+          <img src="img/shopify.svg" alt="Shopify Inc">
         </div>
       </div>
 
