--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
       <div class="layer bottom">
         <div class="content-wrap">
           <div class="content-body">
-            <h2>Shopify Dev Degree</h2>
-            <p>Shopify Dev Degree is a 4 year, work-integrated education program that combines 4500+ hours of work experience with an accredited computer science degree.</p>
+            <h2>Lassonde School of Engineering</h2>
+            <p>The <a href="https://lassonde.yorku.ca/">Lassonde School of Engineering</a> is a professional engineering school at York University. The school's goal is to create entrepreneurial engineers with a social conscience and a sense of global citizenship.</p>
           </div>
-          <img src="img/shopify.svg" alt="Shopify Inc">
+          <img src="img/lassonde.png" alt="Lassonde School of Engineering">
         </div>
       </div>
 
       <div class="layer top">
         <div class="content-wrap">
           <div class="content-body">
-            <h2>Lassonde School of Engineering</h2>
-            <p>The Lassonde School of Engineering is a professional engineering school at York University. Known for its innovative approach to <i>renaissance engineering</i> Lassonde seeks to ...</p>
+            <h2>Shopify Dev Degree</h2>
+            <p><a href="https://devdegree.ca/">Dev Degree</a> is a 4 year, work-integrated education program that combines 4500+ hours of hands-on developer experience at Shopify with an accredited computer science degree.</p>
           </div>
-          <img src="img/lassonde.png" alt="Lassonde School of Engineering">
+          <img src="img/shopify.svg" alt="Shopify Inc">
         </div>
       </div>
       <div id="slider" aria-hidden="true"></div>
