--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Primary Meta Tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Jonathan Gin - Software Developer at Shopify">
+  <meta name="description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
+  <meta name="keywords" content="jonathan,gin,software,developer,dev degree,shopify,intern,computer science">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://jonathangin.me/">
+  <meta property="og:title" content="Jonathan Gin - Software Developer at Shopify">
+  <meta property="og:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
+  <meta property="og:image" content="https://jonathangin.me/img/me.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://jonathangin.me/">
+  <meta property="twitter:title" content="Jonathan Gin - Software Developer at Shopify">
+  <meta property="twitter:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
+  <meta property="twitter:image" content="https://jonathangin.me/img/me.jpg">
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -30,11 +52,31 @@
         <div class="fancy-line" aria-hidden="true"></div>
         <h2 id="quote">Shopify Dev Degree Intern</h2>
         <ul>
-          <li class="social-btn"><a href="https://www.facebook.com/jonathan.gin.1" target="_blank" aria-label="Facebook"><i aria-hidden="true" class="fab fa-facebook-square"></i></a></li>
-          <li class="social-btn"><a href="https://www.instagram.com/jonathangin52/" target="_blank" aria-label="Instagram"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
-          <li class="social-btn"><a href="https://www.github.com/JonathanGin52" target="_blank" aria-label="Github"><i aria-hidden="true" class="fab fa-github"></i></a></li>
-          <li class="social-btn"><a href="https://www.linkedin.com/in/jonathangin/" target="_blank" aria-label="LinkedIn"><i aria-hidden="true" class="fab fa-linkedin"></i></a></li>
-          <li class="social-btn"><a href="https://twitter.com/jonathangin52" target="_blank" aria-label="Twitter"><i aria-hidden="true" class="fab fa-twitter"></i></a></li>
+          <li class="social-btn">
+            <a href="https://www.facebook.com/jonathan.gin.1" target="_blank" aria-label="Facebook">
+              <i aria-hidden="true" class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="social-btn">
+            <a href="https://www.instagram.com/jonathangin52/" target="_blank" aria-label="Instagram">
+              <i aria-hidden="true" class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li class="social-btn">
+            <a href="https://www.github.com/JonathanGin52" target="_blank" aria-label="Github">
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="social-btn">
+            <a href="https://www.linkedin.com/in/jonathangin/" target="_blank" aria-label="LinkedIn">
+              <i aria-hidden="true" class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li class="social-btn">
+            <a href="https://twitter.com/jonathangin52" target="_blank" aria-label="Twitter">
+              <i aria-hidden="true" class="fab fa-twitter"></i>
+            </a>
+          </li>
         </ul>
       </div>
       <div id="profile-img"><img src="img/me.jpg" alt="Jonathan Gin"></div>
