Use separate preview image

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <meta property="og:url" content="https://jonathangin.me/">
   <meta property="og:title" content="Jonathan Gin - Software Developer at Shopify">
   <meta property="og:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
-  <meta property="og:image" content="https://jonathangin.me/img/me.jpg">
+  <meta property="og:image" content="https://jonathangin.me/img/preview.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://jonathangin.me/">
   <meta property="twitter:title" content="Jonathan Gin - Software Developer at Shopify">
   <meta property="twitter:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
-  <meta property="twitter:image" content="https://jonathangin.me/img/me.jpg">
+  <meta property="twitter:image" content="https://jonathangin.me/img/preview.jpg">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
