Fix broken facebook link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2 id="quote">Shopify Dev Degree Intern</h2>
         <ul>
           <li class="social-btn">
-            <a href="https://www.facebook.com/jonathan.gin.1" target="_blank" aria-label="Facebook">
+            <a href="https://www.facebook.com/jonathangin52/" target="_blank" aria-label="Facebook">
               <i aria-hidden="true" class="fab fa-facebook-square"></i>
             </a>
           </li>
