--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,30 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Jonathan Gin</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jonathangin.me/">
+    <meta property="og:title" content="Jonathan Gin - Software Developer at Shopify">
+    <meta property="og:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
+    <meta property="og:image" content="https://jonathangin.me/img/preview.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://jonathangin.me/">
+    <meta property="twitter:title" content="Jonathan Gin - Software Developer at Shopify">
+    <meta property="twitter:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
+    <meta property="twitter:image" content="https://jonathangin.me/img/preview.jpg">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127045673-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-127045673-1');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
