--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#2E3440" />
+    <meta name="title" content="Jonathan Gin - Software Developer at Shopify">
+    <meta name="description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
+    <meta name="keywords" content="jonathan,gin,software,developer,dev degree,shopify,intern,computer science">
+    <meta name="robots" content="index, follow">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,17 +29,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jonathangin.me/">
+    <meta property="og:url" content="https://jonathangin.me">
     <meta property="og:title" content="Jonathan Gin - Software Developer at Shopify">
     <meta property="og:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
-    <meta property="og:image" content="https://jonathangin.me/img/preview.jpg">
+    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://jonathangin.me/">
     <meta property="twitter:title" content="Jonathan Gin - Software Developer at Shopify">
     <meta property="twitter:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
-    <meta property="twitter:image" content="https://jonathangin.me/img/preview.jpg">
+    <meta property="twitter:image" content="%PUBLIC_URL%/preview.jpg">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127045673-1"></script>
