--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,11 @@
     <meta property="twitter:title" content="Jonathan Gin - Software Developer at Shopify">
     <meta property="twitter:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
     <meta property="twitter:image" content="%PUBLIC_URL%/preview.jpg">
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.5.0/firebase-app.js"></script>
+    <script src="/__/firebase/8.5.0/firebase-analytics.js"></script>
+    <script src="/__/firebase/init.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
