--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2E3440" />
-    <meta name="title" content="Jonathan Gin - Software Developer at Shopify">
-    <meta name="description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
-    <meta name="keywords" content="jonathan,gin,software,developer,dev degree,shopify,intern,computer science">
-    <meta name="robots" content="index, follow">
+    <meta name="title" content="Jonathan Gin - Software Developer at Shopify" />
+    <meta
+      name="description"
+      content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program."
+    />
+    <meta
+      name="keywords"
+      content="jonathan,gin,software,developer,dev degree,shopify,intern,computer science"
+    />
+    <meta name="robots" content="index, follow" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,18 +34,30 @@
     <title>Jonathan Gin</title>
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jonathangin.me">
-    <meta property="og:title" content="Jonathan Gin - Software Developer at Shopify">
-    <meta property="og:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
-    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jonathangin.me" />
+    <meta
+      property="og:title"
+      content="Jonathan Gin - Software Developer at Shopify"
+    />
+    <meta
+      property="og:description"
+      content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://jonathangin.me/">
-    <meta property="twitter:title" content="Jonathan Gin - Software Developer at Shopify">
-    <meta property="twitter:description" content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/preview.jpg">
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jonathangin.me/" />
+    <meta
+      property="twitter:title"
+      content="Jonathan Gin - Software Developer at Shopify"
+    />
+    <meta
+      property="twitter:description"
+      content="Jonathan Gin, a software developer at Shopify. Currently enrolled in the Dev Degree program."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/preview.jpg" />
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.5.0/firebase-app.js"></script>
